# Unexpected_Innovations_Toolkit

./: CHANGEOLG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.txt  PROJECT_STORY.md  README.md  SECURITY.md
upm/: __init__.py  ai_predictor.py  api_server.py  cargo.toml  cli.py  config_manager.py  core.py  docker.py  encryption.py  error_tracker.py  file_utils.py  lambda_ci.py  logging_utils.py  manifest_manager.py  network_util.py  notifications.py  plugin_manager.py  project_init.py  requirements-dev.txt  requirements.txt  schema.py  search_util.py
upm/benches/: resolver_bench.rs
upm/docs/: API.md  CONFIGURATION.md  CONTRIBUTING.md  DOCKER.md  LOGGING.md  PLUGINS.md  README.md  RELEASE.md  SECURITY.md  TEMPLATES.md  USAGE.md
upm/plugins/: __init__.py  base.py  cargo.py  entrypoint.py  isolated_runner.py  mock.py  npm.py  pip.py
upm/scripts/: generate_plugin_manifest.py  generate_sbom.sh  sign_config.py  verify_plugin_signatures.py
upm/src/: Cargo.toml  lib.rs
upm/tests/: conftest.py  test_ai_predictor.py  test_api_server.py  test_base.py  test_cargo.py  test_cli.py  test_concurrency.py  test_config_manager.py  test_core.py  test_docker.py  test_encryption.py  test_entrypoint.py  test_error_tracker.py  test_file_utils.py  test_generate_plugin_manifest.py  test_generate_sbom.py  test_lambda_ci.py  test_logging_utils.py  test_network_util.py  test_notifications.py  test_npm.py  test_pip.py  test_plugin_manager.py  test_project_init.py  test_rust_bridge.py  test_schema.py  test_search_util.py  test_security.py  test_sign_config.py
(+1 files in other folders)
