# upm/src/Cargo.toml

[package]
name = "upm-resolver-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "upm_resolver_rs"
crate-type = ["cdylib"]  # For Python extension

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }  # Python bindings
petgraph = "0.6"  # Graph for deps
semver = "1.0"  # Version handling
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"  # JSON
anyhow = "1.0"  # Error handling
reqwest = { version = "0.12", features = ["json", "tokio-native-tls"] }  # HTTP client
tokio = { version = "1.0", features = ["full"] }  # Async runtime
